src/cses/number_spiral/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/number_spiral/number_spiral.cpp.
/Users/michael/repos/competitive-programming/src/cses/number_spiral/number_spiral.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
Found compiler error(s).
